[tool.poetry]
name = "visiontransformer-nyumon"
version = "0.1.0"
description = ""
authors = ["takeshiho0531"]
readme = "README.md"
packages = [{include = "visiontransformer_nyumon"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
isort = "^5.12.0"
black = "^23.3.0"
mypy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
